--- a/customized_config.ini
+++ b/customized_config.ini
@@ -25,6 +25,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/hoshibara/Customized-ACL4SSR-ruleset/master/ruleset/18comic.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/hoshibara/Customized-ACL4SSR-ruleset/master/ruleset/byr.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/hoshibara/Customized-ACL4SSR-ruleset/master/ruleset/epic.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
